--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <header class="panel-header">
           <div>
             <p class="eyebrow">Relay Deck</p>
-            <h1>水泵控制台</h1>
+            <h1>PID水循环控制</h1>
           </div>
           <div class="meta">
             <div class="meta-row">
