--- a/templates/index.html
+++ b/templates/index.html
@@ -25,24 +25,16 @@
           </div>
         </header>
         <div class="tank-row">
-          <div class="lift">
-            <div class="lift-rail">
-              <div class="lift-carriage">
-                <div class="lift-indicator" id="lift-indicator">
-                  <div class="arrow up"></div>
-                  <div class="arrow down"></div>
-                </div>
-              </div>
-            </div>
-            <div class="lift-status" id="lift-status">已停止</div>
-            <div class="lift-controls">
-              <button class="btn lift-up" id="lift-up" type="button">升高</button>
-              <button class="btn lift-down" id="lift-down" type="button">下降</button>
-              <button class="btn lift-stop" id="lift-stop" type="button">停止</button>
-            </div>
-          </div>
           <div class="tank soak" style="--level: {{ tank_levels.soak }}">
             <div class="tank-body">
+              <div class="lift-rail" aria-hidden="true">
+                <div class="lift-carriage">
+                  <div class="lift-indicator" id="lift-indicator">
+                    <div class="arrow up"></div>
+                    <div class="arrow down"></div>
+                  </div>
+                </div>
+              </div>
               <div class="tank-percent">{{ tank_levels.soak }}%</div>
               <div class="tank-metrics">
                 <span>温度 {{ "%.1f"|format(tank_temps.soak) }}°C</span>
@@ -54,6 +46,14 @@
               </div>
             </div>
             <div class="tank-label">浸泡桶</div>
+            <div class="lift-panel">
+              <div class="lift-status" id="lift-status">已停止</div>
+              <div class="lift-controls">
+                <button class="btn lift-up" id="lift-up" type="button">升高</button>
+                <button class="btn lift-down" id="lift-down" type="button">下降</button>
+                <button class="btn lift-stop" id="lift-stop" type="button">停止</button>
+              </div>
+            </div>
           </div>
           <div class="pipe-column" aria-hidden="true">
             <div class="pipe-group fresh">
