--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
           </div>
         </header>
         <div class="tank-row">
-          <div class="tank soak" style="--level: {{ tank_levels.soak }}">
+          <div class="tank soak" style="--level: {{ tank_levels.soak }}; --liquid-base: {{ tank_colors.soak[0] }} {{ tank_colors.soak[1] }} {{ tank_colors.soak[2] }}">
             <div class="tank-body">
               <div class="lift-rail" aria-hidden="true">
                 <div class="lift-carriage">
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="tank-stack">
-            <div class="tank small fresh" style="--level: {{ tank_levels.fresh }}">
+            <div class="tank small fresh" style="--level: {{ tank_levels.fresh }}; --liquid-base: {{ tank_colors.fresh[0] }} {{ tank_colors.fresh[1] }} {{ tank_colors.fresh[2] }}">
               <div class="tank-body">
                 <div class="tank-percent">{{ tank_levels.fresh }}%</div>
                 <div class="tank-metrics">
@@ -80,7 +80,7 @@
               </div>
               <div class="tank-label">清水桶</div>
             </div>
-            <div class="tank small heat" style="--level: {{ tank_levels.heat }}">
+            <div class="tank small heat" style="--level: {{ tank_levels.heat }}; --liquid-base: {{ tank_colors.heat[0] }} {{ tank_colors.heat[1] }} {{ tank_colors.heat[2] }}">
               <div class="tank-body">
                 <div class="tank-percent">{{ tank_levels.heat }}%</div>
                 <div class="tank-metrics">
